rename limit param to n_results
